style.css
#logo-and-searchbox {
    display: flex;

    align-items: center;
    flex-direction: column;
    flex: 1 0 auto;
}

#logo {
    padding-top: 109px;
    padding-bottom: 2rem;
}

.searchbox {
    display:flex;
    border-width: thin;
    border-color: #dfe1e5;
    border-style: solid;
    padding: 5px 0px;
    border-radius: 30px;
    width: 42.5%;
}

.search-icon, 
.microphone-icon {
  padding: 10px;
}

.microphone-icon {
  margin-left: auto;
}

#search-textbox {
    border: 0px none;
    outline: none;
    width: 100%;
}

.svg-icon {
    width: 1em;
    height: 1em;
  }
  
  .svg-icon path,
  .svg-icon polygon,
  .svg-icon rect {
    fill: grey;
  }
  
  .svg-icon circle {
    stroke: #4691f6;
    stroke-width: 1;
  }

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.navbar, .footer{
  display: flex;
  flex-direction: row;
}

.navbar-left, .footer-left {
  display: flex;
  flex-direction: row;
  margin-right: auto;
}
.navbar-right, .footer-right {
  display: flex;
  flex-direction: row;
  justify-items: flex-end;
  margin-left: auto;
}

.footer-center {
  flex: 1;
  margin: auto;
  justify-content: center;
}

.footer-left {
  flex: 2;
}

.footer-right {
  flex: 2;
  justify-content: flex-end;
}

.navbar-link {
  padding: 10px;
}

.navbar-link > a {
  text-decoration: none;
  color: grey;
  font-family: Arial, Helvetica, sans-serif;
  font-size: .8rem;
}

.footer-link {
  padding: 10px;
}

.footer-box {
  display: flex;
}

.footer-link > a {
  text-decoration: none;
  color: grey;
  font-family: Arial, Helvetica, sans-serif;
  font-size: .8rem;
}

body {
  display: flex;
  flex-direction: column;
}

.footer {
  flex-shrink: 0;
}

html, body {
  height: 100%;
}

.search-buttons {
  display: flex;
  align-items: center;
}

.search-buttons > button {
  margin: 20px 5px;
}

